lex bot script and readme.mdx update

--- a/README.mdx
+++ b/README.mdx
@@ -9,4 +9,7 @@ Intent is the main class that all lex intents should inherit from, see BookHotel
 
 ## Testing
 Testing is setup for most components using pytest
-To run the tests, type 'pytest' into the terminal
+To run the tests, type the below into the terminal
+```
+pytest
+```
